# ai_tools

./: .gitignore  README.md  flutter_launcher_icons.yaml  pubspec.yaml
android/app/: build.gradle
assets/: model.json  settings.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_wrapper.dart  chat_screen.dart  main.dart  utils.dart
lib/config/: config.dart  config.g.dart
lib/cv/: classfication_box.dart  cv_notifier.dart  cv_screen.dart  expanable_model_box.dart  object_bbox.dart  object_detect_box.dart  selectable_button.dart
lib/input/: input_field.dart
lib/isar/: chat_history.dart  chat_history.g.dart  database.dart
lib/llm/: chat_screen.dart  crazy_switch.dart
lib/messagebox/: chat_response.dart  error_messagebox.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
rust/: .gitignore  Cargo.toml  notice.md  run.txt
rust/assets/: .gitignore  convert_model.py  download_qwen_script.py  hello.cu  pt_to_safetensors.py  read_model.py
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: cv.rs  llm.rs  mod.rs  simple.rs  tools.rs  web_server.rs
rust/src/constant/: mod.rs
rust/src/cv/: beit.rs  efficientnet.rs  mod.rs  object_detect_result.rs
rust/src/cv/yolov8/: infer.rs  model.rs
rust/src/llm/: bigcode.rs  mod.rs  model.rs  qwen2.rs  rwkv.rs  text_generation.rs  token_output_stream.rs
rust/src/pipeline/: basic_node.rs  deep_think.rs  mod.rs  ner-pipeline.xml  ner.rs  rewrite-question-pipeline.xml
rust/src/tests/: command.rs  macros.rs  magika_test.rs  mlp_test.rs  mod.rs  reflection_pad2d.rs  resnet_generator_test.rs  unet.rs  utils.rs
rust/src/tests/gan/: dcgan.rs  mod.rs
rust/src/tools/: mod.rs  tools_trait.rs
rust/src/tools/mlp/: model.rs
rust/src/utils/: image_processor.rs
rust/src/web_server/: mod.rs
rust/src/web_server/controllers/: mod.rs
rust/src/web_server/models/: mod.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+38 files in other folders)
