[package]
name = "rust_lib_ai_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.91"
candle-core = "=0.7.2"
candle-onnx = "=0.7.2"
flutter_rust_bridge = "=2.5.1"
image = "0.25.4"
libm = "=0.2.8"
serde = "1.0.198"
tokio = { version = "1.41.0", features = ["full"] }


[workspace]
resolver = "2"
