[package]
name = "rust_lib_ai_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.91"
candle-core = { version = "=0.7.2", features = ['cuda'] }
candle-nn = { version = "=0.7.2", features = ['cuda'] }
candle-onnx = { version = "=0.7.2" }
candle-transformers = { version = "=0.7.2", features = ['cuda'] }
csv = "1.3.0"
flutter_rust_bridge = "=2.5.1"
image = "0.25.4"
libm = "=0.2.8"
once_cell = "1.20.2"
serde = "1.0.198"
serde_json = "1.0.132"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["full"] }


[workspace]
resolver = "2"
