[package]
name = "rust_lib_ai_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ab_glyph = "0.2.29"
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-actors = "4.2.0"
anyhow = "1.0.91"
candle-core = { version = "=0.7.2", features = ['cuda'] }
candle-nn = { version = "=0.7.2", features = ['cuda'] }
candle-onnx = { version = "=0.7.2" }
candle-transformers = { version = "=0.7.2", features = ['cuda'] }
csv = "1.3.0"
env_logger = "0.11.5"
flutter_rust_bridge = "=2.5.1"
futures = "0.3.31"
futures-util = "0.3.31"
image = "0.25.4"
imageproc = "0.25.0"
libm = "=0.2.8"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.132"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { features = ["v4"], version = "1.11.0"}


[workspace]
resolver = "2"
